--- a/.lando.yml
+++ b/.lando.yml
@@ -4,14 +4,14 @@ recipe: laravel
 env_file:
   - src/.env
 
-#excludes:
-#  - vendor
-#  - node_modules
+# excludes:
+  # - src/vendor
+  # - src/node_modules
 
 config:
   webroot: src/public
   via: nginx
-  php: '8.1'
+  php: 8.1
   xdebug: true
   cache: redis:6
   ssl: false
@@ -21,12 +21,13 @@ config:
     php: .lando/php.ini
     vhosts: .lando/nginx.conf
     cache: .lando/redis.conf
+  workdir: app/src
 
 proxy:
   mailhog:
     - mail.lndo.site
   appserver_nginx:
-    - laravel.lndo.site
+    - laravel-app.lndo.site
   phpmyadmin:
     - phpmyadmin.lndo.site
 
@@ -38,7 +39,7 @@ services:
     hosts:
       - database
   node:
-    type: node
+    type: node:19
     build:
       - npm --prefix src install
       - npm --prefix src run build
@@ -48,6 +49,7 @@ services:
       - appserver
   appserver:
     type: php:8.1
+    workdir: /src
     ssl: true
     build_as_root:
       - apt-get update -y
@@ -66,6 +68,9 @@ services:
     run:
       - crontab /app/.lando/cron.txt
     overrides:
+      volumes:
+        - ./:/app
+        - ./src:/app/src
       depends_on:
         - database
   horizon:
@@ -119,4 +124,4 @@ tooling:
   composer:
     service: appserver
     dir: /app/src
-    desxription: Run composer in src folder.
+    description: Run laravel composer.
